--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "react-table-6": "^6.11.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
