--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^2.4.2",
+    "react-google-maps": "^9.4.5",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-table-6": "^6.11.0",
